// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components >> theme card  Given there is a image the component still renders correctly Should match snapshot correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "borderWidth": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
        },
        Array [
          Object {
            "elevation": 2,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 10,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "overflow": "hidden",
          },
          Array [
            Object {
              "borderBottomLeftRadius": 8,
              "borderTopLeftRadius": 8,
              "height": 70,
              "width": 70,
            },
          ],
        ]
      }
    >
      <FastImageView
        resizeMode="cover"
        source={
          Object {
            "priority": "high",
            "uri": "https://picsum.photos/id/237/200/300",
          }
        }
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "borderBottomRightRadius": 8,
            "borderTopRightRadius": 8,
            "display": "flex",
            "justifyContent": "center",
            "padding": 8,
            "width": "80%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000000",
              "display": "flex",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": 24,
            },
          ]
        }
      >
        Test Title
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#54575a",
              "display": "flex",
              "fontSize": 14,
              "lineHeight": 18,
            },
          ]
        }
      >
        This is a test of sub text
      </Text>
    </View>
  </View>
</View>
`;

exports[`components >> theme card  Given there is no image url the component still renders Should match snapshot correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 8,
      "borderWidth": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexDirection": "row",
        },
        Array [
          Object {
            "elevation": 2,
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.05,
            "shadowRadius": 10,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "borderBottomRightRadius": 8,
            "borderTopRightRadius": 8,
            "display": "flex",
            "justifyContent": "center",
            "padding": 8,
            "width": "80%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#000000",
              "display": "flex",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": 24,
            },
          ]
        }
      >
        Test Title
      </Text>
      <Text
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#54575a",
              "display": "flex",
              "fontSize": 14,
              "lineHeight": 18,
            },
          ]
        }
      >
        This is a test of sub text
      </Text>
    </View>
  </View>
</View>
`;
